fix: ProfileInfo css on mobile

--- a/src/components/ProfileInfo/ProfileInfo.less
+++ b/src/components/ProfileInfo/ProfileInfo.less
@@ -16,7 +16,10 @@
         width: 15rem;
     }
 
-    @media screen and (max-width: 800px){
+    @media screen and (max-width: 800px) {
+        display: flex;
+        flex-direction: column;
+
         .profile-bio-groups-container{
             width: 100%;
 
